--- a/pages/details.html
+++ b/pages/details.html
@@ -128,8 +128,7 @@
                <button type="submit">Add Details</button>
             </form>
         </div>
-    </div>
-
+    </div>sssss
     </div>
 </body>
 </html>
