--- a/pages/email_verification.html
+++ b/pages/email_verification.html
@@ -21,24 +21,32 @@
 
     <script>
         document.getElementById("sendOTP").addEventListener("click", function() {
-            const email = document.getElementById("userEmail").value;
-            if (email) {
-                const otp = Math.floor(1000 + Math.random() * 9000);
-                sessionStorage.setItem("otp", otp);
-                sessionStorage.setItem("email", email);
+    const email = document.getElementById("userEmail").value;
+    const username = prompt("Enter your username:");
+    const password = prompt("Enter your password:");
+    
+    if (email && username && password) {
+        const otp = Math.floor(1000 + Math.random() * 9000);
+        sessionStorage.setItem("otp", otp);
+        sessionStorage.setItem("email", email);
+        sessionStorage.setItem("username", username);
+        sessionStorage.setItem("password", password);  // Store password in sessionStorage
 
-                emailjs.init("user id"); // Replace with your EmailJS user ID
-                emailjs.send("serice id", "template id ", {
-                    to_email: email,
-                    otp_code: otp
-                }).then(function(response) {
-                    alert("OTP sent successfully!");
-                    window.location.href = "otp_verification.html";
-                }, function(error) {
-                    alert("Error sending OTP!");
-                });
-            }
+        emailjs.init("fdBhukiJH5a0L2FUa");
+        emailjs.send("service_07esa9d", "template_h2q7mxr", {
+            to_email: email,
+            otp_code: otp
+        }).then(function(response) {
+            alert("OTP sent successfully!");
+            window.location.href = "otp_verification.html";
+        }, function(error) {
+            alert("Error sending OTP!");
         });
+    } else {
+        alert("Please fill in all details!");
+    }
+});
+
     </script>
 </body>
 </html>
