--- a/pages/email_verification.html
+++ b/pages/email_verification.html
@@ -23,8 +23,8 @@
                 const otp = Math.floor(1000 + Math.random() * 9000);
                 sessionStorage.setItem("otp", otp); // Store OTP in sessionStorage
 
-                emailjs.init("your public key"); // Replace with your actual EmailJS public key
-                emailjs.send("your service id", "your template id", {
+                emailjs.init("n1mynshmvV-ncZptA"); // Replace with your actual EmailJS public key
+                emailjs.send("service_07esa9d", "template_h2q7mxr", {
                     to_email: email,
                     otp_code: otp
                 }).then(function(response) {
