--- a/pages/email_verification.html
+++ b/pages/email_verification.html
@@ -5,106 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Verification</title>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="../assets/js/script.js"></script>
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
-<style>
-    /* General Styles */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f7f8;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
 
-/* Centering Container */
-.container {
-    background: #fff;
-    padding: 2rem;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 350px;
-}
-
-/* Heading */
-h2 {
-    color: #333;
-    margin-bottom: 15px;
-}
-
-/* Input Field */
-input.email {
-    width: 90%;
-    padding: 12px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    background-color: #f9f9f9;
-}
-
-/* Disabled input */
-input.email:read-only {
-    background-color: #e9ecef;
-    cursor: not-allowed;
-}
-
-/* Button */
-button {
-    width: 100%;
-    background: #007bff;
-    color: white;
-    padding: 12px;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-button:hover {
-    background: #0056b3;
-}
-
-/* Responsive */
-@media (max-width: 400px) {
-    .container {
-        width: 90%;
-    }
-}
-
-</style>
 <body>
-    <div class="container">
-        <h2>Email Verification</h2>
-        <input class="email" type="email" id="userEmail" placeholder="Enter your email" required readonly>
-        <button type="submit" id="sendOTP">Send OTP</button>
+    <div class="email-body">
+        <div class="email-container">
+            <h2>Email Verification</h2>
+            <input class="email" type="email" id="userEmail" placeholder="Enter your email" required readonly>
+            <button type="submit" id="sendOTP">Send OTP</button>
+            <a href="../index.php" class="back-btn">Back To Login</a>
+        </div>
     </div>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const email = urlParams.get("email");
-            document.getElementById("userEmail").value = email;
-
-            document.getElementById("sendOTP").addEventListener("click", function() {
-                const otp = Math.floor(1000 + Math.random() * 9000);
-                sessionStorage.setItem("otp", otp); // Store OTP in sessionStorage
-
-                emailjs.init("n1mynshmvV-ncZptA"); // Replace with your actual EmailJS public key
-                emailjs.send("service_07esa9d", "template_h2q7mxr", {
-                    to_email: email,
-                    otp_code: otp
-                }).then(function(response) {
-                    alert("OTP sent successfully!");
-                    window.location.href = "otp_verification.html";
-                }).catch(function(error) {
-                    alert("Error sending OTP!");
-                });
-            });
-        });
-    </script>
 </body>
 </html>
