--- a/pages/otp_verification.html
+++ b/pages/otp_verification.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTP Verification</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="../assets/js/script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -17,33 +18,5 @@
 
         <p id="responseMessage"></p>
     </div>
-
-    <script>
-        document.getElementById("verifyOTP").addEventListener("click", function() {
-            const enteredOTP = document.getElementById("otpInput").value;
-            const storedOTP = sessionStorage.getItem("otp"); // Get OTP from sessionStorage
-
-            if (enteredOTP === storedOTP) {
-                // OTP is correct, proceed to complete registration in PHP
-                fetch('./auth.php', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-                    body: `verify_otp=1`
-                })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.status === "success") {
-                        alert("Registration successful!");
-                        window.location.href = "../index.php"; // Redirect to login
-                    } else {
-                        document.getElementById("responseMessage").innerText = data.message;
-                    }
-                })
-                .catch(error => console.error('Error:', error));
-            } else {
-                document.getElementById("responseMessage").innerText = "Invalid OTP!";
-            }
-        });
-    </script>
 </body>
 </html>
