--- a/pages/details.html
+++ b/pages/details.html
@@ -20,7 +20,7 @@
                <input type="number" step="0.1" name="height" placeholder="Height (cm)" required><br>
                <button type="submit">Add Details</button>
             </form>
-            <a href="./dashboard.php">Back to dashboard</a>
+            <a href="./dashboard.php" class="back-btn">Back to dashboard</a>
         </div>
     </div>
     </div>
