--- a/pages/otp_verification.html
+++ b/pages/otp_verification.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="../assets/js/script.js"></script>
 </head>
-<body>
-    <div class="container">
+<body class="otp-body">
+    <div class="otp-container">
         <h2>OTP Verification</h2>
         <p>Please type the verification code sent to your email.</p>
         <p>The OTP will expire in <span id="expire">30</span> seconds.</p>
