--- a/pages/email_verification.html
+++ b/pages/email_verification.html
@@ -12,6 +12,7 @@
 <body>
     <div class="email-body">
         <div class="email-container">
+            <div id="message-box" class="message-box"></div>
             <h2>Email Verification</h2>
             <input class="email" type="email" id="userEmail" placeholder="Enter your email" required readonly>
             <button type="submit" id="sendOTP">Send OTP</button>
