--- a/pages/otp_verification.html
+++ b/pages/otp_verification.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTP Verification</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <script src="../assets/js/script.js"></script>
 </head>
 <body class="otp-body">
     <div class="otp-container">
+        <p id="responseMessage"></p> <!-- Success/Error message here -->
         <h2>OTP Verification</h2>
-        <p>Please type the verification code sent to your email.</p>
-        <p>The OTP will expire in <span id="expire">30</span> seconds.</p>
+        <p id="emailMessage"></p> <!-- Dynamic email message -->
+        <p>The OTP will expire in <span id="expire">60</span> seconds.</p>
 
         <input type="text" id="otpInput" placeholder="Enter OTP" required />
         <button id="verifyOTP">Verify OTP</button>
-
-        <p id="responseMessage"></p>
+        <button id="resendOTP" style="display: none;">Resend OTP</button>
+        <a href="../index.php" class="back-btn">Back To Login</a>
     </div>
 </body>
 </html>
